<resources>
    <string name="app_name">JobAppTracker</string>

    <string name="btn_new_job">Add new job</string>
    <string name="btn_export_to_csv">Export jobs to csv</string>
    <string name="tv_company_name_hint">Company name</string>
    <string name="tv_date_applied_hint">Date applied</string>
    <string name="tv_job_description_hint">Job description</string>
    <string name="tv_job_description_holder">Job description touch to expand</string>
    <string name="btn_today">Today</string>
    <string name="btn_get_from_clipboard">Get link from clipboard</string>
    <string name="btn_add_job">Add job</string>
    <string name="tv_applied">Applied:</string>
    <string name="btn_add_interaction">Add Interaction</string>
    <string name="write_to_drive">Write to Google Drive</string>
    <string name="request_to_delete">Are you sure you want to delete?</string>
    <string name="delete_alert_button">Delete</string>
    <string name="cancel_alert_button">Cancel</string>
    <string name="bullet">\u2022 %1$s</string>
    <string name="job_link">Link to Job Posting</string>
</resources>
