<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:hint="@string/tv_company_name_hint"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_applied_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_alignParentStart="true"
            android:text="@string/tv_applied"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_applied_text"
            android:hint="@string/tv_date_applied_hint"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_job_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/tv_job_description_hint"
        android:tag="hidden"
        android:textStyle="italic"
        android:textSize="12sp" />

</LinearLayout>