<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="@string/tv_company_name_hint"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:id="@+id/tv_company_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:hint="@string/tv_date_applied_hint"
        android:id="@+id/tv_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@id/tv_date"
        android:text="@string/tv_applied"
        android:id="@+id/tv_applied_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/tv_applied_text"
        android:hint="@string/tv_job_description_hint"
        android:id="@+id/tv_job_description"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_job_description"
        android:id="@+id/rv_interactions_list"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_new_interaction"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_add_interaction"
            android:id="@+id/btn_add_interaction"/>

    </LinearLayout>


</RelativeLayout>